--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,7 +56,7 @@
          <div class="banner-text">
             <h1 class="responsive-headline">Hi, I'm Noah</h1>
             
-            <p>this page has been viewed <a id="counter"></a> times :) </p> 
+            <p>this page has been viewed <a id="counter"></a> times</p> 
             <ul class="social">
                <li><a href="https://www.linkedin.com/in/noahgallo/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/NoahGallo" target="_blank"><i class="fa fa-github" ></i></a></li>
