Minor html changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,7 +87,7 @@
 
             <h2>ABOUT ME</h2>
 
-            <p> Hi, I'm Noah Gallo, Cloud Computing Master student at UPJV & Cloud Engineer intern at Fujitsu Luxembourg
+            <p> Hi, I'm Noah Gallo, Cloud Computing Master student at UPJV & Cloud Engineer intern at Fujitsu Luxembourg. Passionate about architecting innovative cloud solutions and fluent in multiple languages, I bring a unique blend of hands-on experience and academic insights to the table.🚀🌐
                
          </br>
       </br>
