Added a certification to the index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,6 +118,28 @@
 
                <div class="twelve columns">
 
+                  <h3>AZ-104 + AZ-305 = Microsoft Certified: Azure Solutions Architect Expert</h3>
+                  <p class="info"><em class="date">May 2024</em></p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Designing Microsoft Azure Infrastructure Solutions AZ-305</h3>
+                  <p class="info"><em class="date">May 2024</em></p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
                   <h3>Azure Administrator Associate AZ-104</h3>
                   <p class="info"><em class="date">March 2024</em></p>
 
