Added a certification and modified some certification titles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,7 +118,18 @@
 
                <div class="twelve columns">
 
-                  <h3>Designing Microsoft Azure Infrastructure Solutions AZ-305 (Azure Solutions Architect Expert)</h3>
+                  <h3>Azure DevOps Engineer Expert AZ-400</h3>
+                  <p class="info"><em class="date">September 2024</em></p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Azure Solutions Architect Expert AZ-305</h3>
                   <p class="info"><em class="date">May 2024</em></p>
 
                </div>
